--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "reactjs-popup": "^2.0.5"
   },
   "scripts": {
+    "start": "react-scripts --openssl-legacy-provider start",
     "dev": "BROWSER=none react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
